fixed picture spacing on cards and titles, fixed nav by moving links to header section and out of container body, also adjust styling and positioning of nav links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,3 +19,7 @@
     font-family: titleFont, monospace;
     font-weight: 500;
 }
+
+.navList {
+    list-style-type: none;
+}
